implemented client side proficiencies data

--- a/public/index.html
+++ b/public/index.html
@@ -87,34 +87,70 @@
             <img class="mobile-components-image" src="mobile-components.png" alt="">
           </div>
           <div class="col">
-            <div class="hero-message">Hi! My name is Cory Williams. <br> I build elegant <span class="underline-warm">user interfaces</span> and <span class="underline-cool">intelligent components.</span></div>
+            <h1 class="hero-message">Hi! My name is Cory Williams. <br> I build elegant <span class="underline-warm">user interfaces</span> and <span class="underline-cool">intelligent components.</span></h1>
           </div>
-          <!-- <ul>
-            <li><i class="fas fa-database"></i> Database</li>
-            <li><i class="fab fa-node-js"></i> NodeJS</li>
-            <li><i class="fab fa-github"></i> Github</li>
-            <li><i class="fab fa-react"></i> React</li>
-            <li><i class="fab fa-angular"></i> Angular</li>
-            <li><i class="fab fa-css3"></i> CSS3</li>
-            <li><i class="fab fa-html5"></i> HTML5</li>
-            <li><i class="fab fa-sass"></i> SASS</li>
-            <li><i class="fab fa-npm"></i> NPM</li>
-            <li><i class="fab fa-js-square"></i> ES6+</li>
-            <li><i class="fab fa-grunt"></i><i class="fab fa-gulp"></i> Grunt / Gulp</li>
-            <li><i class="fab fa-docker"></i> Docker</li>
-            <li><i class="fab fa-chrome"></i> Chrome DevTools</li>
-            <li><i class="devicon-webpack-plain"></i> Webpack</li>
-            <li><i class="devicon-express-original"></i> Express</li>
-            <li><i class="devicon-redis-plain"></i> Redis</li>
-            <li><i class="devicon-apache-plain"></i> Apache</li>
-            <li><i class="devicon-ruby-plain"></i> Ruby on Rails</li>
-            <li><i class="devicon-mongodb-plain"></i> MongoDB</li>
-            <li><i class="devicon-postgresql-plain"></i> Postgres</li>
-            <li><i class="devicon-jasmine-plain"></i> Jasmine</li>
-            <li><i class="devicon-d3js-plain"></i> D3.JS</li>
-          </ul> -->
         </div>
       </header>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col skills-col">
+            <h2>Client-Side Proficiencies</h2>
+            <ul>
+              <li><i class="fab fa-html5"></i> HTML5</li>
+              <li><i class="fab fa-css3"></i> CSS3</li>
+              <li><i class="fab fa-sass"></i> SASS</li>
+              <li><i class="fab fa-js-square"></i> ES6+</li>
+              <li><i class="devicon-typescript-plain"></i> TypeScript</li>
+              <li><i class="fab fa-react"></i> React</li>
+              <li><i class="fab fa-angular"></i> Angular 2</li>
+              <li><i class="devicon-jquery-plain"></i> jQuery</li>
+              <li><i class="devicon-d3js-plain"></i> D3.JS</li>
+              <li><i class="devicon-photoshop-plain"></i> Photoshop</li>
+              <li><i class="devicon-illustrator-plain"></i> Illustrator</li>
+              <li><i class="devicon-bootstrap-plain"></i> Bootstrap4</li>
+            </ul>
+            <h2>Server-Side Proficiencies</h2>
+            <ul>
+              <li><i class="fab fa-node-js"></i> NodeJS</li>
+              <li><i class="devicon-express-original"></i> Express</li>
+              <li><i class="devicon-apache-plain"></i> Apache</li>
+              <li><i class="devicon-nginx-original"></i> NGINX</li>
+              <li><i class="devicon-ruby-plain"></i> Ruby</li>
+              <li><i class="devicon-rails-plain"></i> Rails</li>
+            </ul>
+            <h2>Databases</h2>
+            <ul>
+              <li><i class="devicon-redis-plain"></i> Redis</li>
+              <li><i class="devicon-postgresql-plain"></i> Postgres</li>
+              <li><i class="devicon-mongodb-plain"></i> MongoDB</li>
+              <li><i class="fas fa-database"></i> PHPMyAdmin</li>
+              <li><i class="devicon-mysql-plain"></i> MySQL</li>
+            </ul>
+            <h2>Development / Build Tools</h2>
+            <ul>
+              <li><i class="fab fa-github"></i> Github</li>
+              <li><i class="fab fa-npm"></i> NPM</li>
+              <li><i class="fas fa-cat"></i> Yarn</li>
+              <li><i class="fab fa-grunt"></i></i> Grunt</li>
+              <li><i class="devicon-webpack-plain"></i> Webpack</li>
+              <li><i class="fas fa-terminal"></i> SSH</li>
+            </ul>
+            <h2>Test Driven Development</h2>
+              <ul>
+                <li><i class="devicon-jasmine-plain"></i> Jasmine</li>
+                <li><i class="devicon-mocha-plain"></i> Mocha</li>
+              </ul>
+            <h2>DevOps / Continuous Integration</h2>
+              <ul>
+                <li><i class="fab fa-docker"></i> Docker</li>
+                <li><i class="fab fa-jenkins"></i> Jenkins</li>
+              </ul>
+          </div>
+          <div class="col experience-col">
+            <h2>Experience</h2>
+          </div>
+        </div>
+      </div>
     </div>
     <!--
       This HTML file is a template.
