add responsive styles

--- a/public/index.html
+++ b/public/index.html
@@ -82,18 +82,33 @@
             </nav>
           </div>
         </div>
-        <div class="row">
-          <div class="col mobile-components-box">
-            <img class="mobile-components-image" src="mobile-components.png" alt="">
-          </div>
-          <div class="col">
+        <div class="hero row">
+          <div class="col-lg">
             <h1 class="hero-message">Hi! My name is Cory Williams. <br> I build elegant <span class="underline-warm">user interfaces</span> and <span class="underline-cool">intelligent components.</span></h1>
+          </div>
+          <div class="col-lg mobile-components-box">
+            <img class="mobile-components-image" src="mobile-components.png" alt="">
           </div>
         </div>
       </header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col skills-col">
+          <div class="col-sm experience-col">
+            <h2>About Me</h2>
+            <p>
+              Hey There! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque facere in veniam ipsum fuga libero repellendus corrupti, esse voluptatem quod, blanditiis! Error consequuntur sapiente harum blanditiis repudiandae, optio nisi est.
+            </p>
+            <h2>My Process</h2>
+            <p>
+              Idea. Figuring out tools for job. Sketching/Prototyping.  Development.  Production. Deployment. Continuous Integration
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique aut eaque quas aspernatur quasi, beatae eos velit deleniti expedita adipisci. Itaque blanditiis autem, adipisci deleniti corporis quibusdam distinctio, consectetur recusandae.
+            </p>
+            <h2>Experience</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, possimus at nesciunt maiores porro voluptas, earum. At quidem aspernatur quos dolores recusandae soluta reprehenderit mollitia, alias assumenda qui aperiam, consequatur.</p>
+          </div>
+          <div class="col-sm skills-col">
             <h2>Client-Side Proficiencies</h2>
             <ul>
               <li><i class="fab fa-html5"></i> HTML5</li>
@@ -145,9 +160,6 @@
                 <li><i class="fab fa-docker"></i> Docker</li>
                 <li><i class="fab fa-jenkins"></i> Jenkins</li>
               </ul>
-          </div>
-          <div class="col experience-col">
-            <h2>Experience</h2>
           </div>
         </div>
       </div>
