add responsive navigation

--- a/public/index.html
+++ b/public/index.html
@@ -83,17 +83,17 @@
           </div>
         </div>
         <div class="hero row">
-          <div class="col-lg">
-            <h1 class="hero-message">Hi! My name is Cory Williams. <br> I build elegant <span class="underline-warm">user interfaces</span> and <span class="underline-cool">intelligent components.</span></h1>
+          <div class="col-lg-8">
+            <h1 class="hero-message">Hi! My name is Cory Williams. <br> I build elegant <span class="underline-warm">user interfaces</span> and <span class="underline-cool">intelligent web applications.</span></h1>
           </div>
-          <div class="col-lg mobile-components-box">
+          <div class="col-lg-4 mobile-components-box">
             <img class="mobile-components-image" src="mobile-components.png" alt="">
           </div>
         </div>
       </header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm experience-col">
+          <div class="col-lg experience-col">
             <h2>About Me</h2>
             <p>
               Hey There! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque facere in veniam ipsum fuga libero repellendus corrupti, esse voluptatem quod, blanditiis! Error consequuntur sapiente harum blanditiis repudiandae, optio nisi est.
@@ -138,15 +138,12 @@
               <li><i class="devicon-redis-plain"></i> Redis</li>
               <li><i class="devicon-postgresql-plain"></i> Postgres</li>
               <li><i class="devicon-mongodb-plain"></i> MongoDB</li>
-              <li><i class="fas fa-database"></i> PHPMyAdmin</li>
-              <li><i class="devicon-mysql-plain"></i> MySQL</li>
             </ul>
             <h2>Development / Build Tools</h2>
             <ul>
               <li><i class="fab fa-github"></i> Github</li>
               <li><i class="fab fa-npm"></i> NPM</li>
               <li><i class="fas fa-cat"></i> Yarn</li>
-              <li><i class="fab fa-grunt"></i></i> Grunt</li>
               <li><i class="devicon-webpack-plain"></i> Webpack</li>
               <li><i class="fas fa-terminal"></i> SSH</li>
             </ul>
